# napari-power-widgets

./: .pre-commit-config.yaml  LICENSE  README.md  setup.cfg  tox.ini
examples/: image_crop_3d.py  profile_line_nd.py
src/napari_power_widgets/: __init__.py  napari.yaml  types.py
src/napari_power_widgets/_tests/: test_interaction_box.py  test_mouse.py  test_widgets.py
src/napari_power_widgets/_widgets/: __init__.py  _buttoned.py  _coordinate.py  _features.py  _interaction_box.py  _labels.py  _mouse.py  _multidim.py  _shapes.py  _temp_shape.py  _typing.py  _utils.py
