[metadata]
name = napari-power-widgets
version = 0.0.1
description = Powerful widgets and type annotations for napari plugin widgets
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hanjinliu/napari-power-widgets
author = Hanjin Liu
author_email = liuhanjin-sc@g.ecc.u-tokyo.ac.jp
license = BSD-3-Clause
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: napari
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Image Processing
project_urls =
    Bug Tracker = https://github.com/hanjinliu/napari-power-widgets/issues
    Documentation = https://github.com/hanjinliu/napari-power-widgets#README.md
    Source Code = https://github.com/hanjinliu/napari-power-widgets
    User Support = https://github.com/hanjinliu/napari-power-widgets/issues

[options]
packages = find:
install_requires =
    numpy

python_requires = >=3.8
include_package_data = True
package_dir =
    =src

# add your package requirements here

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    napari-power-widgets = napari_power_widgets:napari.yaml

[options.extras_require]
testing =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/


[options.package_data]
* = *.yaml
